--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,9 +1,9 @@
 <!-- NAV-BAR -->
-<!-- <nav id="navbar_top" class="navbar navbar-expand-lg navbar-dark bg-dark text-white fixed-top">
+<nav id="navbar_top" class="navbar navbar-expand-lg navbar-dark bg-dark text-white fixed-top">
     <div class="container">
-      <a href="" class="navbar-brand"> -->
+      <a href="" class="navbar-brand">
         <!-- Logo or Text here -->
-        <!-- <h3><strong><span class="text-danger">Code</span><span class="text-success">rs</span> <span class="text-warning"> Quote</span><span class="text-success">s</span></strong></h3>
+        <h3><strong><span class="text-danger">Code</span><span class="text-success">rs</span> <span class="text-warning"> Quote</span><span class="text-success">s</span></strong></h3>
       </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav">
@@ -26,7 +26,7 @@
     </div>
   </nav>
   <br>
-  <br> -->
+  <br>
 
   <!-- ********** MAIN CODING START********** -->
   <!-- <div class="container">
