--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -29,7 +29,7 @@
   <br>
 
   <!-- ********** MAIN CODING START********** -->
-  <!-- <div class="container">
+  <div class="container">
     <div class="row">
         <div class="col mt-5">
           <section *ngFor="let quotes of quotes; let i=index">
@@ -39,7 +39,7 @@
                   {{ quotes.content }}<button class="btn btn-outline-info m-1 btn-sm" id="see-more" (click)='toggleDetails(i)'>See More</button>
                 </h3>
               </div>
-              <div class="card-body">
+              <!-- <div class="card-body">
                 <blockquote class="blockquote mb-0">
                   <p>Posted on: <strong>{{quotes.myDate|date}}</strong></p>
                   <footer class="blockquote-footer">
@@ -47,10 +47,10 @@
                     </app-quote-details>
                   </footer>
                 </blockquote>
-              </div>
+              </div> -->
             </div>
           </section>
-        </div> -->
+        </div>
         <!-- <div class="col mt-5 rounded">
           <app-quote-form (addQuote)='addNewQuote($event)'></app-quote-form>
         </div>
