--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -39,7 +39,7 @@
                   {{ quotes.content }}<button class="btn btn-outline-info m-1 btn-sm" id="see-more" (click)='toggleDetails(i)'>See More</button>
                 </h3>
               </div>
-              <!-- <div class="card-body">
+              <div class="card-body">
                 <blockquote class="blockquote mb-0">
                   <p>Posted on: <strong>{{quotes.myDate|date}}</strong></p>
                   <footer class="blockquote-footer">
@@ -47,7 +47,7 @@
                     </app-quote-details>
                   </footer>
                 </blockquote>
-              </div> -->
+              </div>
             </div>
           </section>
         </div>
