--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -64,17 +64,17 @@
 
 
 <!-- FOOTER AREA -->
-<!-- <footer class="text-white bg-dark pt-5 pb-2">
+<footer class="text-white bg-dark pt-5 pb-2">
     <div class="container">
-        <div class="row"> -->
-            <!-- <div class="col">
+        <div class="row">
+            <div class="col">
                 <div>
                   <h3><strong><span class="text-danger">Code</span><span class="text-success">rs</span> <span class="text-warning">Quote</span><span class="text-success">s</span></strong></h3>
                     <p><em>The only site with <strong>Quotes</strong> that make</em></p>
                     <p><em>coding a big fun!!!</em></p>
                 </div>
 
-                <div> -->
+                <div>
                   <!-- Web Statistics Here -->
                   <!-- <a href='http://www.freevisitorcounters.com'>freevisitorcounterss Homepage</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=8e104b33ef7ebce4385f04bfcaed18b5942eab98'></script>
                   <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/859032/t/0"></script> -->
