visit counts in footer

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -76,10 +76,10 @@
 
                 <div>
                   <!-- Web Statistics Here -->
-                  <!-- <a href='http://www.freevisitorcounters.com'>freevisitorcounterss Homepage</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=8e104b33ef7ebce4385f04bfcaed18b5942eab98'></script>
-                  <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/859032/t/0"></script> -->
-                <!-- </div>
-            </div> -->
+                  <a href='http://www.freevisitorcounters.com'>freevisitorcounterss Homepage</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=8e104b33ef7ebce4385f04bfcaed18b5942eab98'></script>
+                  <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/859032/t/0"></script>
+                </div>
+            </div>
 
             <!-- Links To Different Parts & Pages -->
             <!-- <div class="col">
