useful links to  parts

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -82,7 +82,7 @@
             </div>
 
             <!-- Links To Different Parts & Pages -->
-            <!-- <div class="col">
+            <div class="col">
                 <div class="">
                     <h3>Useful Links:</h3>
                 </div>
@@ -92,7 +92,7 @@
                     <p><a href="###"><strong>Add Quotes</strong></a></p>
                     <p><a href="https://streetgm.gumroad.com/" target="_blank"><i class="fas fa-shopping-cart"></i> <strong>Shop</strong></a></p>                                             
                 </div>
-            </div> -->
+            </div>
 
             <!-- Social Media Linked -->
             <!-- <div class="col">             
