--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -95,7 +95,7 @@
             </div>
 
             <!-- Social Media Linked -->
-            <!-- <div class="col">             
+            <div class="col">             
                 <div class="">
                     <h3>Social Media:</h3>
                 </div>
@@ -115,8 +115,8 @@
                 </div>
             </div>
         </div>
-        <div class="text-center pt-5" id="footer-links">
+        <!-- <div class="text-center pt-5" id="footer-links">
             <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> <a href="index.html"><strong><span class="text-danger">Code</span><span class="text-success">rs</span> <span class="text-warning">Quote</span><span class="text-success">s</span></strong>.</a> All Rights Reserved</p>
-        </div>
+        </div> -->
     </div>
-</footer> -->
+</footer>
