quotes details, auther, poster

--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -1,6 +1,6 @@
-<!-- <p>Author: {{ quotes.author }}</p>
+<p>Author: {{ quotes.author }}</p>
 <p>Posted by: {{ quotes.poster }}</p>
-<button (click)='onClickUpVote()' class="btn btn-success m-3">UpVote {{ upVoteNumber }}</button>
-<button (click)='onClickDownVote()' class="btn btn-danger m-3">DownVote {{ downVoteNumber }}</button>
-<br>
+<!-- <button (click)='onClickUpVote()' class="btn btn-success m-3">UpVote {{ upVoteNumber }}</button>
+<button (click)='onClickDownVote()' class="btn btn-danger m-3">DownVote {{ downVoteNumber }}</button> -->
+<!-- <br>
 <button class="btn btn-outline-danger" (click)='quoteComplete(true)'>Delete</button> -->
