--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -59,8 +59,8 @@
 
 <!-- ********** MAIN CODING END ********** -->
 
-<!-- <br>
-<br> -->
+<br>
+<br>
 
 
 <!-- FOOTER AREA -->
@@ -115,8 +115,8 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="text-center pt-5" id="footer-links">
+        <div class="text-center pt-5" id="footer-links">
             <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> <a href="index.html"><strong><span class="text-danger">Code</span><span class="text-success">rs</span> <span class="text-warning">Quote</span><span class="text-success">s</span></strong>.</a> All Rights Reserved</p>
-        </div> -->
+        </div>
     </div>
 </footer>
