quote form, input Quote

--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,12 +1,12 @@
-<!-- <div class="container-fluid">
+<div class="container-fluid">
     <h2 class="bg-warnig rounded p-2">Post a new Quote</h2>
-    <form #quoteForm='ngForm' (ngSubmit)='submitQuote()'> -->
-        <!-- <div class="form-group">
+    <form #quoteForm='ngForm' (ngSubmit)='submitQuote()'>
+        <div class="form-group">
             <label for="content">Quote:</label>
             <textarea class="form-control" id="content" cols="" rows="4" [(ngModel)]="newQuote.content" name="content" #content="ngModel" required placeholder="Please write a Quote here"></textarea>
             <div [hidden]="content.valid || content.pristine" class="alert alert-danger">
                 <p>Please write a Quote!!!</p>
-            </div> -->
+            </div>
 
             <!-- Display -->
             <!-- <br>
