--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -9,9 +9,9 @@
             </div>
 
             <!-- Display -->
-            <!-- <br>
+            <br>
             Display: <span class="bg-info rounded p-1">{{ newQuote.content }}</span>
-        </div> -->
+        </div>
         <!-- <div class="form-control">
             <label for="author">Author Name:</label>
             <input type="text" id="author" class="form-control" [(ngModel)]="newQuote.author" name="author" #author='ngModel' required placeholder="Name of Author">
