input submitter, quote form

--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -20,14 +20,14 @@
                 <p>Name of Author is required!!!</p>
             </div>
         </div>
-        <!-- <div class="form-control">
+        <div class="form-control">
             <label for="poster">Poster Name:</label>
             <input type="text" id="poster" class="form-control" [(ngModel)]="newQuote.poster" name="poster" #poster='ngModel' required placeholder="Your name here">
 
             <div [hidden]="poster.valid || poster.pristine" class="alert alert-danger">
                 <p>Your Name is required!!!</p>
             </div>
-        </div> -->
+        </div>
         <!-- <div class="form-control">
             <label for="complete">Date Posted:</label>
             <input type="date" id="complete" [(ngModel)]="newQuote.myDate" name="myDate" #myDate="ngModel" required>
