--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -28,7 +28,7 @@
                 <p>Your Name is required!!!</p>
             </div>
         </div>
-        <!-- <div class="form-control">
+        <div class="form-control">
             <label for="complete">Date Posted:</label>
             <input type="date" id="complete" [(ngModel)]="newQuote.myDate" name="myDate" #myDate="ngModel" required>
             <div [hidden]="myDate.valid || myDate.pristine" class="alert alert-danger">
@@ -36,6 +36,6 @@
             </div>
         </div>
         <br>
-        <button type="submit" class="btn btn-outline-success">Post Quote</button> -->
+        <button type="submit" class="btn btn-outline-success">Post Quote</button>
     </form>
 </div>
