--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -51,11 +51,11 @@
             </div>
           </section>
         </div>
-        <!-- <div class="col mt-5 rounded">
+        <div class="col mt-5 rounded">
           <app-quote-form (addQuote)='addNewQuote($event)'></app-quote-form>
         </div>
     </div>
-  </div> -->
+  </div>
 
 <!-- ********** MAIN CODING END ********** -->
 
