--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -1,7 +1,7 @@
 #see-more{
     float: right;
 }
-/* #footer-links p a{
+#footer-links p a{
     text-decoration: none;
     color: white;
 }
@@ -9,4 +9,4 @@
     color: hotpink;
     background-color: blue;
     padding: 4px;
-} */
+}
