--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -28,13 +28,13 @@
                 <p>Your Name is required!!!</p>
             </div>
         </div>
-        <div class="form-control">
+<!--         <div class="form-control">
             <label for="complete">Date Posted:</label>
             <input type="date" id="complete" [(ngModel)]="newQuote.completeDate" name="completeDate" #completeDate="ngModel" required>
             <div [hidden]="completeDate.valid || completeDate.pristine" class="alert alert-danger">
                 <p>Date of posting is required !!!</p>
             </div>
-        </div>
+        </div> -->
         <br>
         <button type="submit" class="btn btn-outline-success">Post Quote</button>
     </form>
